--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [6, 8, 10, 12, 14]
+        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v2
